...
        button.showsMenuAsPrimaryAction = false
        button.preferredMenuElementOrder = .fixed
        button.accessibilityLabel = String(localized: "New Note")
        button.accessibilityHint = String(
            localized: "Touch and hold for new note options."
        )
        button.accessibilityIdentifier = "notebook-new-item"
        button.addTarget(context.coordinator, action: #selector(Coordinator.createNote),
                         for: .primaryActionTriggered)
        button.addTarget(context.coordinator, action: #selector(Coordinator.prepareFeedback),
                         for: .touchDown)
        button.addTarget(context.coordinator, action: #selector(Coordinator.menuWillPresent),
                         for: .menuActionTriggered)
...
